[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/karabin-smoke-fx.png" type="Texture" id=1]
[ext_resource path="res://pickups/Pickup.tscn" type="PackedScene" id=2]
[ext_resource path="res://pickups/Gun.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://components/Sounds.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/ui_sounds/Minimalist4.mp3" type="AudioStream" id=6]
[ext_resource path="res://pickups/Projectile.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sprites/karabin.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.99993
height = 38.0001

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 5.5 )

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MuzzleFlashSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MuzzleFlashSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Shoot"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 7, 8, 9, 10, 13, 15, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MuzzleFlashSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_fire_projectile"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MuzzleFlashSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Gun" instance=ExtResource( 2 )]
script = ExtResource( 3 )
projectile_scene = ExtResource( 7 )
projectile_velocity = 1200.0
projectile_range = 400.0
cooldown_time = 0.3
max_ammo = 3

[node name="GunSprite" type="Sprite" parent="." index="0"]
position = Vector2( 1.234, -3.28 )
scale = Vector2( 0.5, 0.8 )
texture = ExtResource( 8 )
flip_h = true
vframes = 20
frame = 19

[node name="MuzzleFlashSprite" type="Sprite" parent="." index="1"]
visible = false
position = Vector2( 18, -1 )
rotation = -1.58163
scale = Vector2( 0.8, 1.21 )
texture = ExtResource( 1 )
hframes = 6
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
position = Vector2( 1, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="ProjectilePosition" type="Position2D" parent="." index="3"]
position = Vector2( 30, -3 )

[node name="SparksPosition" type="Position2D" parent="." index="4"]
position = Vector2( 22, -3 )

[node name="DudDetector" type="Area2D" parent="." index="5"]
position = Vector2( 0, -3 )
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="DudDetector" index="0"]
position = Vector2( 29.5, 0.5 )
shape = SubResource( 2 )

[node name="CooldownTimer" type="Timer" parent="." index="6"]
process_mode = 0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]
autoplay = "Idle"
anims/Idle = SubResource( 3 )
anims/Shoot = SubResource( 4 )

[node name="Sounds" type="Node" parent="." index="8"]
script = ExtResource( 5 )

[node name="Shoot" type="AudioStreamPlayer" parent="Sounds" index="0"]
stream = ExtResource( 4 )
volume_db = 9.0
bus = "Sound Effects"

[node name="Empty" type="AudioStreamPlayer" parent="Sounds" index="1"]
stream = ExtResource( 6 )
volume_db = 5.0
bus = "Sound Effects"

[node name="HeldPosition" parent="." index="9"]
position = Vector2( -17, -14 )

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
